diesel_compile_tests/tests/fail/sqlite_insert_or_ignore_cannot_be_used_on_pg.stderr
error[E0277]: `diesel::query_builder::insert_statement::private::InsertOrIgnore` is no valid SQL fragment for the `Pg` backend
    --> tests/fail/sqlite_insert_or_ignore_cannot_be_used_on_pg.rs:21:18
     |
21   |         .execute(&mut connection)
     |          ------- ^^^^^^^^^^^^^^^ the trait `QueryFragment<Pg>` is not implemented for `diesel::query_builder::insert_statement::private::InsertOrIgnore`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Pg` database system does not support 
             this SQL syntax
     = help: the following other types implement trait `QueryFragment<DB, SP>`:
               `diesel::query_builder::insert_statement::private::InsertOrIgnore` implements `QueryFragment<Mysql>`
               `diesel::query_builder::insert_statement::private::InsertOrIgnore` implements `QueryFragment<Sqlite>`
     = note: required for `InsertStatement<table, ValuesClause<..., ...>, ...>` to implement `QueryFragment<Pg>`
     = note: required for `InsertStatement<table, ValuesClause<..., ...>, ...>` to implement `ExecuteDsl<diesel::PgConnection, Pg>`
note: required by a bound in `diesel::RunQueryDsl::execute`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn execute(self, conn: &mut Conn) -> QueryResult<usize>
     |        ------- required by a bound in this associated function
...
LL |         Self: methods::ExecuteDsl<Conn>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::execute`
  
     For more information about this error, try `rustc --explain E0277`.
